[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/support_menu/SupportSelectionMenu.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="SupportSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.0313726, 0.164706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 910.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 165.0
margin_right = 620.0
margin_bottom = 194.0
text = "POST_BATTLE"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 258.0
margin_right = 620.0
margin_bottom = 287.0
text = "CHOOSE_A_PAIR"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 351.0
margin_right = 620.0
margin_bottom = 695.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 7
custom_constants/separation = 12
alignment = 1

[node name="YachieAndSakiButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_right = 470.0
margin_bottom = 77.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "YACHIE_AND_SAKI"

[node name="SakiAndYuumaButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_top = 89.0
margin_right = 470.0
margin_bottom = 166.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "SAKI_AND_YUUMA"

[node name="YuumaAndYachieButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 150.0
margin_top = 178.0
margin_right = 470.0
margin_bottom = 255.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 4
text = "YUUMA_AND_YACHIE"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 190.0
margin_top = 267.0
margin_right = 430.0
margin_bottom = 344.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 4
text = "RETURN"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/YachieAndSakiButton" to="." method="_on_YachieAndSakiButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/SakiAndYuumaButton" to="." method="_on_SakiAndYuumaButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/YuumaAndYachieButton" to="." method="_on_YuumaAndYachieButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
